Update to theme description

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 	Theme Name: 	Music Evolver
 	Theme URI: 		http://evolver.kakesamples.com
-	Description: 	Theme for music sites!
+	Description: 	Kake Multimedia and ProdHMD's WordPress small theme for musicians.
 	Version: 		3.0.0
 	Author: 		James Burrell
 	Author URI: 	http://web.lljb3.com
